Package: R.oo
=============

Version: 1.9.7 [2012-06-20]
o BUG FIX/GENERALIZATION: throw() for Exception would give an error on
  R < 2.14.0, where no generic getCall() exists.  Now it works for
  all versions of R.


Version: 1.9.6 [2012-06-11]
o BUG FIX/GENERALIZATION: Rdoc$getKeywords() now uses system
  environment variable R_DOC_DIR for locating the internal
  KEYWORDS.db.  Thanks to Charles Hogg at NIST for suggesting this.


Version: 1.9.5 [2012-04-20]
o Added argument 'export' to setConstructorS3().
o Now Rdoc$getUsage() searches also the package namespace for 
  the function/method definition.  This is done, before looking
  in the global search path.
o CLEANUP: setConstructorS3() no longer sets attribute "formals".  It
  has been deprecated since April 2003.


Version: 1.9.4 [2012-04-05]
o Now package imports and exports getCall() from the 'stats' package
  so that generic function getCall() is available for Exception:s 
  also when 'stats' is not loaded, e.g. during executing .Rprofile.


Version: 1.9.3 [2012-03-18]
o Now it is possible to set the default value of argument 'cleanup'
  of getStackTrace() for Exception via an option.


Version: 1.9.2 [2012-03-08]
o Made stack traces of Exception:s more informative and cleaner.
o Now the default throw() of R.methodsS3 is "quietly" overwritten,
  i.e. there is no longer a warning about it when R.oo is loaded.
o Now package no longer warns about renaming existing functions
  getMethods() and getClasses() of 'base' to default methods during
  installation, iff R.methodsS3 (>= 1.2.3).


Version: 1.9.1 [2012-03-05]
o CLEANUP: throw() for 'error' is now just a wrapper for stop(). 
  Previously it had to do what stop() now does for 'condition' objects.
o CRAN POLICY: Replaced all appendVarArgs() for 'base' functions that
  do .Internal() calls, because they would then appear as local functions
  of this package and hence not be accepted by CRAN according to their